[gd_scene load_steps=22 format=3 uid="uid://d1bg4nv6tx0iy"]

[ext_resource type="Texture2D" uid="uid://dfd3naw2lmwer" path="res://assets/sprites/1. Parallax/1_ Trees Background.png" id="1_hp87r"]
[ext_resource type="Script" uid="uid://xmde16pmpnvu" path="res://scenes/lvl_1.gd" id="1_u7exc"]
[ext_resource type="Texture2D" uid="uid://derne5w03vkwx" path="res://assets/sprites/1. Parallax/3_ Trees.png" id="2_mvjca"]
[ext_resource type="Texture2D" uid="uid://wcyyxrgmiy32" path="res://assets/sprites/1. Parallax/5_ Floor Platform.png" id="3_u7exc"]
[ext_resource type="Texture2D" uid="uid://dnb6ex56xoxc7" path="res://assets/sprites/BookPack/cuaadro negro.png" id="4_02ush"]
[ext_resource type="Texture2D" uid="uid://co1oju2axl1uu" path="res://assets/sprites/BookPack/books_byBatuhan2.png" id="5_kylad"]
[ext_resource type="PackedScene" uid="uid://c8502e66q0se6" path="res://scenes/player.tscn" id="6_hp87r"]
[ext_resource type="PackedScene" uid="uid://07qmwmy5ld11" path="res://scenes/enemy.tscn" id="7_mvjca"]
[ext_resource type="Script" uid="uid://bw8ta2hjj412k" path="res://scenes/word_spawner.gd" id="8_kylad"]
[ext_resource type="AudioStream" uid="uid://cmkeotnxankbx" path="res://assets/music/Level 1.mp3" id="8_mvjca"]
[ext_resource type="Script" uid="uid://c2dsus8wi0c42" path="res://scenes/projectile_container.gd" id="9_28l0p"]
[ext_resource type="Script" uid="uid://bivij3iqjhyl3" path="res://scenes/input_handler.gd" id="10_yq2hi"]
[ext_resource type="PackedScene" uid="uid://d2pci8ky3lcnp" path="res://scenes/projectile.tscn" id="11_yq2hi"]
[ext_resource type="PackedScene" uid="uid://yq1161uhvs8b" path="res://scenes/word_label.tscn" id="12_2tpkn"]
[ext_resource type="FontFile" uid="uid://c3se4ipau7avf" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="14_6oc1e"]
[ext_resource type="AudioStream" uid="uid://bo47s544ovl14" path="res://assets/effects/bell.mp3" id="16_sh364"]
[ext_resource type="AudioStream" uid="uid://dbt2un55a8bvo" path="res://assets/effects/wrong.mp3" id="17_vl02w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sh364"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vl02w"]
bg_color = Color(0.106289, 0.725595, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpkqi"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tpdyh"]
bg_color = Color(0.984314, 0, 0, 1)

[node name="lvl1" type="Node2D"]
script = ExtResource("1_u7exc")

[node name="FondoBosque" type="Sprite2D" parent="."]
position = Vector2(651.5, 318.25)
scale = Vector2(2.68511, 2.98984)
texture = ExtResource("1_hp87r")

[node name="planoMedio" type="Sprite2D" parent="."]
position = Vector2(176, 376)
scale = Vector2(0.930263, 1.87423)
texture = ExtResource("2_mvjca")

[node name="planoMedio" type="Sprite2D" parent="planoMedio"]
position = Vector2(511.111, -0.00574446)
scale = Vector2(1.17, 1.02314)
texture = ExtResource("2_mvjca")

[node name="planoMedio2" type="Sprite2D" parent="planoMedio"]
position = Vector2(1008.55, -1.29762)
scale = Vector2(0.926727, 1.02585)
texture = ExtResource("2_mvjca")

[node name="planoMedio3" type="Sprite2D" parent="planoMedio"]
position = Vector2(518.133, 130.721)
scale = Vector2(2.98551, 1.51314)
texture = ExtResource("3_u7exc")

[node name="primerPlano" type="Sprite2D" parent="."]
position = Vector2(617, 731)
scale = Vector2(81.2622, 21.2749)
texture = ExtResource("4_02ush")

[node name="primerPlano" type="Sprite2D" parent="primerPlano"]
position = Vector2(-6.27598, -0.235017)
scale = Vector2(0.0517475, 0.195231)
texture = ExtResource("5_kylad")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(627, 451)
zoom = Vector2(0.87, 0.87)

[node name="Player" parent="." instance=ExtResource("6_hp87r")]
position = Vector2(117, 472)

[node name="HealthBar" type="ProgressBar" parent="Player"]
offset_left = -127.0
offset_top = 90.0
offset_right = 113.0
offset_bottom = 120.0
rotation = -1.57106
theme_override_styles/background = SubResource("StyleBoxFlat_sh364")
theme_override_styles/fill = SubResource("StyleBoxFlat_vl02w")
value = 50.0
show_percentage = false

[node name="Enemy" parent="." instance=ExtResource("7_mvjca")]
position = Vector2(1105, 474)

[node name="HealthBar" type="ProgressBar" parent="Enemy"]
offset_left = 82.0
offset_top = 88.0
offset_right = 322.0
offset_bottom = 118.0
rotation = -1.57106
theme_override_styles/background = SubResource("StyleBoxFlat_cpkqi")
theme_override_styles/fill = SubResource("StyleBoxFlat_tpdyh")
value = 50.0
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_mvjca")
autoplay = true

[node name="WordSpawner" type="Node2D" parent="."]
script = ExtResource("8_kylad")
word_scene = ExtResource("12_2tpkn")

[node name="ProjectileContainer" type="Node2D" parent="."]
script = ExtResource("9_28l0p")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("10_yq2hi")

[node name="UI" type="CanvasLayer" parent="."]

[node name="WordInput" type="LineEdit" parent="UI"]
offset_left = 387.0
offset_top = 573.0
offset_right = 748.0
offset_bottom = 633.0
theme_override_fonts/font = ExtResource("14_6oc1e")
theme_override_font_sizes/font_size = 20
alignment = 1
keep_editing_on_text_submit = true

[node name="Projectile" parent="." instance=ExtResource("11_yq2hi")]

[node name="WordLabel" parent="." instance=ExtResource("12_2tpkn")]
position = Vector2(-472, -306)

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="bell" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_sh364")
volume_db = -15.0

[node name="wrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_vl02w")
volume_db = 2.0

[connection signal="timeout" from="Timer" to="InputHandler" method="_on_timer_timeout"]
